# NdkLibjpeg

./: README.md  libjpeg-turbo编译.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/east/ndklibjpeg/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/east/ndklibjpeg/: MainActivity.kt  NativeImageUtils.java  PermissionUtil.java  Uri2PathUtil.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/east/ndklibjpeg/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
